reactor newInstance method
Co-Authored-By: 常珂洁 <76939156+lan-dian@users.noreply.github.com>