@@ -204,7 +204,7 @@ public class CompatibleTypeUtils {
             }
             if (!type.isInterface()) {
                 try {
-                    Collection result = (Collection) type.newInstance();
+                    Collection result = (Collection) type.getDeclaredConstructor().newInstance();
                     result.addAll(collection);
                     return result;
                 } catch (Throwable ignored) {
@@ -222,7 +222,7 @@ public class CompatibleTypeUtils {
             Collection collection;
             if (!type.isInterface()) {
                 try {
-                    collection = (Collection) type.newInstance();
+                    collection = (Collection) type.getDeclaredConstructor().newInstance();
                 } catch (Throwable e) {
                     collection = new ArrayList<Object>(length);
                 }
